--- a/research.htm
+++ b/research.htm
@@ -211,6 +211,7 @@ Data-driven discovery has become a new paradigm in biological research. By analy
 <li><a href="https://dutta-labwebsite.github.io/" target="_blank"><font color="#002F6C">Anindya Dutta</font></a>, Department of Genetics, University of Alabama at Birmingham</li>
 <li><a href="https://campuspress.yale.edu/wanglab/" target="_blank"><font color="#002F6C">Siyuan Wang</font></a>, Department of Genetics, Yale University</li>
 <li><a href="https://hmh-cdi.org/en/Research/Faculty/Hai-Hui-Xue" target="_blank"><font color="#002F6C">Hai-Hui Xue</font></a>, Center for Discovery and Innovation, Hackensack University Medical Center</li>
+<li><a href="https://research.childrenshospital.org/research-units/zhou-lab-research" target="_blank"><font color="#002F6C">Xu Zhou</font></a>, Boston Children's Hospital, Harvard Medical School</li>
 <li><a href="https://labs.utsouthwestern.edu/zhu-yuan-lab/" target="_blank"><font color="#002F6C">Yuan Zhu</font></a>, Department of Pediatrics, UT Southwestern Medical Center</li>
 </p></ul>
 <button type="button" class="collapsible">
@@ -224,16 +225,15 @@ Data-driven discovery has become a new paradigm in biological research. By analy
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/hj8d/" target="_blank"><font color="#002F6C">Hao Jiang</font></a>, Department of Biochemistry and Molecular Genetics</li>
 <li><a href="http://lilab.medicine.virginia.edu/" target="_blank"><font color="#002F6C">Hui Li</font></a>, Department of Pathology</li>
 <li><a href="https://uvahealth.com/findadoctor/profile/li-li" target="_blank"><font color="#002F6C">Li Li</font></a>, Department of Family Medicine</li>
-<li><a href="http://millerlab.org/" target="_blank"><font color="#002F6C">Clint L. Miller</font></a>, Center for Public Health Genomics</li>
+<li><a href="http://millerlab.org/" target="_blank"><font color="#002F6C">Clint L. Miller</font></a>, Department of Genome Sciences</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/gm7sj/" target="_blank"><font color="#002F6C">Golam Mohi</font></a>, Department of Biochemistry and Molecular Genetics</li>
+<li><a href="https://med.virginia.edu/genome-sciences/faculty/?facbio=1&id=27896" target="_blank"><font color="#002F6C">Aakrosh Ratan</font></a>, Department of Genome Sciences</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/jss5y/" target="_blank"><font color="#002F6C">Jeffrey S. Smith</font></a>, Department of Biochemistry and Molecular Genetics</li>
 <li><a href="https://www.immunology.virginia.edu/Sun/" target="_blank"><font color="#002F6C">Jie Sun</font></a>, Beirne B. Carter Center for Immunology Research</li>
 <li><a href="https://toddstuke.wixsite.com/stukelab" target="_blank"><font color="#002F6C">P. Todd Stukenberg</font></a>, Department of Biochemistry and Molecular Genetics</li>
 <li><a href="https://uvahealth.com/findadoctor/profile/jianguo-tao" target="_blank"><font color="#002F6C">Jianguo Tao</font></a>, Department of Pathology</li>
-<li><a href="https://uvahealth.com/findadoctor/Agnieszka-Swiatecka-Urban-1497816045" target="_blank"><font color="#002F6C">Agnieszka Swiatecka-Urban</font></a>, Department of Pediatric Nephrology</li>
 <li><a href="https://med.virginia.edu/yuh-hwa-wang-lab/" target="_blank"><font color="#002F6C">Yuh-Hwa Wang</font></a>, Department of Biochemistry and Molecular Genetics</li>
-<li><a href="https://www.cs.virginia.edu/~az9eg/website/lab.html" target="_blank"><font color="#002F6C">Aidong Zhang</font></a>, Department of Computer Science</li>
-<li><a href="https://mic.med.virginia.edu/zong/" target="_blank"><font color="#002F6C">Hui Zong</font></a>, Department of Microbiology, Immunology and Cancer Biology</li>
+<li><a href="https://med.virginia.edu/faculty/faculty-listing/xtx3wj/" target="_blank"><font color="#002F6C">Kexin Xu</font></a>, Department of Genome Sciences</li>
 (in alphabetical order)
 </p></ul>
 </div>
@@ -273,7 +273,7 @@ Data-driven discovery has become a new paradigm in biological research. By analy
 </div>
 </div>
 <hr>
-<p align="right">Last modified: May 12, 2025</p>
+<p align="right">Last modified: May 18, 2025</p>
 
 </div>
 
