--- a/publication.htm
+++ b/publication.htm
@@ -135,20 +135,31 @@ function myFunction() {
 <h2 align="center"><font color="#002F6C">Publications</font></h2>
 <hr>
 <h3><a href="https://scholar.google.com/citations?user=GV7vSDMAAAAJ" target="_blank"><font color="#002F6C">Google Scholar profile</font></a></h3>
-<hr>
+<!--<hr>
 <h3><font color="#002F6C">Recent Preprints</font></h3>
 * indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2024.12.18.629220v3" target="_blank">Regulation of epigenetics and chromosome structure by human ORC2</a><br>
-Zhangli Su*, <u>Mengxue Tian</u>*, Etsuko Shibata, Yoshiyuki Shibata, Tianyi Yang, <u>Zhenjia Wang</u>, Fulai Jin, <u>Chongzhi Zang</u><sup>#</sup>, Anindya Dutta<sup>#</sup>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2025.05.02.651992" target="_blank">TEAD1 condensates are transcriptionally inactive storage sites on the pericentromeric heterochromatin</a><br>
+Jindayi Liang*, Yiran Wang*, Justin Demmerle, Britney Jiayu He, Christopher J. Ricketts, W. Marston Linehan, <u>Chongzhi Zang</u>, Danfeng Cai
 <br>
-<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2024.12.18.629220" target="_blank">https://doi.org/10.1101/2024.12.18.629220</a> (2024)
+<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2025.05.02.651992" target="_blank">https://doi.org/10.1101/2025.05.02.651992</a> (2025)
 </p></li>
-</ol>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2025.04.14.648851" target="_blank">Single-cell multimodal profiling highlights persistent aortic smooth muscle cell changes in diabetic mice despite glycemic control</a><br>
+Vinay Singh Tanwar*, Vajir Malek*, <u>Jingyi Wang</u>*, Yingjun Luo, Naseeb Kaur Malhi, Hongpan Zhang, Maryam Abdollahi, Linda Lanting, Parijat Senapati, Sadhan Das, Marpadga A Reddy, <u>Chongzhi Zang</u>, Clint L. Miller<sup>#</sup>, Zhen Bouman Chen<sup>#</sup>, Rama Natarajan<sup>#</sup>
+<br>
+<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2025.04.14.648851" target="_blank">https://doi.org/10.1101/2025.04.14.648851</a> (2025)
+</p></li>
+</ol>-->
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
+* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.cell.com/cell-reports/fulltext/S2211-1247(25)00587-X" target="_blank">Regulation of epigenetics and chromosome structure by human ORC2</a><br>
+Zhangli Su*, <u>Mengxue Tian</u>*, Etsuko Shibata, Yoshiyuki Shibata, Tianyi Yang, <u>Zhenjia Wang</u>, Fulai Jin, <u>Chongzhi Zang</u><sup>#</sup>, Anindya Dutta<sup>#</sup>
+<br>
+<i><b>Cell Reports</b></i> 44 (6), 115816 (2025)
+</p></li>
 <li><p><a href="https://www.pnas.org/doi/10.1073/pnas.2502256122" target="_blank">Hdac1 as an early determinant of intermediate-exhausted CD8<sup>+</sup> T cell fate in chronic viral infection</a><br>
 Wei Hu, <u>Shengen Shawn Hu</u>, Shaoqi Zhu, Weiqun Peng, Vladimir P. Badovinac, <u>Chongzhi Zang</u>, Xudong Zhao, Hai-Hui Xue
 <br>
@@ -374,7 +385,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="47">
+<ol style="padding-left: 24px; line-height: 1.6;" start="48">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -494,7 +505,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: May 12, 2025</p>
+<p align="right">Last modified: June 14, 2025</p>
 </div>
 
 <script>
