--- a/publication.htm
+++ b/publication.htm
@@ -168,7 +168,7 @@ Wei Hu, <u>Shengen Shawn Hu</u>, Shaoqi Zhu, Weiqun Peng, Vladimir P. Badovinac,
 <li><p><a href="https://www.nature.com/articles/s41592-025-02652-z" target="_blank">Perturb-tracing enables high-content screening of multi-scale 3D genome regulators</a><br>
 Yubao Cheng, Mengwei Hu, Bing Yang, Tyler B. Jensen, Yuan Zhang, Tianqi Yang, Ruihuan Yu, <u>Zhaoxia Ma</u>, Jonathan S. D. Radda, Shengyan Jin, <u>Chongzhi Zang</u>, Siyuan Wang
 <br>
-<i><b>Nature Methods</b></i>, doi: <a href="https://doi.org/10.1038/s41592-025-02652-z" target="_blank">https://doi.org/10.1038/s41592-025-02652-z</a> (2025)
+<i><b>Nature Methods</b></i> 22, 950&ndash;961 (2025)
 </p></li>
 <li><p><a href="https://academic.oup.com/nar/article/53/3/gkaf015/7979041" target="_blank">Genomic clustering tendency of transcription factors reflects phase-separated transcriptional condensates at super-enhancers</a><br>
 <u>Shengyuan Wang</u>*, <u>Zhenjia Wang</u>*, <u>Chongzhi Zang</u>
