--- a/publication.htm
+++ b/publication.htm
@@ -156,7 +156,7 @@ Vinay Singh Tanwar*, Vajir Malek*, <u>Jingyi Wang</u>*, Yingjun Luo, Naseeb Kaur
 * indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
 <li><p><a href="https://www.cell.com/cell-reports/fulltext/S2211-1247(25)00587-X" target="_blank">Regulation of epigenetics and chromosome structure by human ORC2</a><br>
-Zhangli Su*, <u>Mengxue Tian</u>*, Etsuko Shibata, Yoshiyuki Shibata, Tianyi Yang, <u>Zhenjia Wang</u>, Fulai Jin, <u>Chongzhi Zang</u><sup>#</sup>, Anindya Dutta<sup>#</sup>
+Zhangli Su*<sup>#</sup>, <u>Mengxue Tian</u>*, Etsuko Shibata, Yoshiyuki Shibata, Tianyi Yang, <u>Zhenjia Wang</u>, Fulai Jin, <u>Chongzhi Zang</u><sup>#</sup>, Anindya Dutta<sup>#</sup>
 <br>
 <i><b>Cell Reports</b></i> 44 (6), 115816 (2025)
 </p></li>
