--- a/index.htm
+++ b/index.htm
@@ -163,6 +163,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">June 2025</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Mengxue's ORC2 regulation paper in collaboration with Zhangli Su and Anindya Dutta is published in <a href="https://www.cell.com/cell-reports/fulltext/S2211-1247(25)00587-X" target="_blank"><i><b>Cell Reports</b></i></a>. Congratulations!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">May 2025</font>
 		</p>
 	</div>
@@ -1209,7 +1221,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: May 12, 2025</p>
+<p align="right">Last modified: June 30, 2025</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
