--- a/people.htm
+++ b/people.htm
@@ -315,22 +315,29 @@ Jingyi Wang is a PhD student in the Biomedical Sciences (BIMS) program. She comp
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Bhummanat Sittipongpittaya is a PhD student in the Biomedical Sciences (BIMS) program. He received his M.S. in Biomedical Engineering from Case Western Reserve University in 2024. He is interested in bioinformatics tools development and computational approaches to address biological questions.
 </p><br><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/danielle_hughes.jpg" style="width:150px">
+<b>Danielle Hughes</b>
+<a href="mailto:twm7bu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Danielle Hughes is a PhD student in the Biomedical Sciences (BIMS) program completing a rotation in the lab. Originally from Prattville, AL, she earned her undergraduate degree from the University of Tennessee, Knoxville in 2022 and her master’s degree from Johns Hopkins University in 2025. Danielle is interested in studying biomolecular condensates. In her free time, she enjoys hiking, baking, thrifting, foraging for wild mushrooms, watching Halloween movies, reading classic literature, and visiting animal shelters. 
+</p><br><br><br>
 <!--<p style="line-height: 1.6;">
 <img align="right" src="images/sophie_okeefe.jpg" style="width:180px">
 <b>Sophie O'Keefe</b>
 <a href="mailto:ugp9ke@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Sophie O’Keefe is a PhD student in the Biomedical Sciences (BIMS) program. Prior to joining UVA, she received a B.S in Biology, with a focus in immunology, from the University of Chicago. She then worked as a research assistant at Columbia University studying the role of vascular immune cross-talk in the metastatic progression of pancreatic neuroendocrine tumors. She hopes to improve her computational modeling skills in the context of tumor immunology.
-</p><br><br>
+</p><br><br>-->
 <hr>
 <h3><font color="#002F6C">Research Assistant</font></h3>
 <p style="line-height: 1.6;">
-<img align="right" src="images/shiyu_jiang.jpg" style="width:180px">
-<a href="https://jasonjiangs.github.io/" target="_blank"><b>Shiyu Jiang</b></a>
-<a href="mailto:sjiang43@jhu.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=DBJYZiYAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
+<img align="right" src="images/chloe_chen.jpg" style="width:180px">
+<b>Chloe Chen</b></a>
+<a href="mailto:wzw8ad@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Shiyu Jiang joined the lab as a volunteer in January 2023 and became research assistant in July 2023. He received his master’s degree in Computer Science at Johns Hopkins University in December 2023 and previously received B.S. in Computer Science from Wenzhou-Kean University in China. His research interests lie in developing algorithms and tools to solve biological problems. In his free time, he likes to play soccer and spend some time at the gym.
-</p><br><br>-->
+Chloe Chen is a post-baccalaureate pre-medical student at UVA. She completed her undergraduate degree in Computer Science at the University of Waterloo. Prior to joining the pre-medical program, she worked as a software engineer in the healthcare technology sector, where she developed user-centered tools to improve patient experience. In her free time, Chloe enjoys drawing, traveling, and learning new languages.
+</p><br><br><br>
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
 <!--<h4><font color="#002F6C">Class of 2025</font></h4>
@@ -426,7 +433,7 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 		<td><a href="https://brandonyfeng.github.io" target="_blank"><b>Yushan (Brandon) Feng</b></a></td>
 		<td>BA/MS in Computer Science/Statistics</td>
 		<td>04/2018&ndash;05/2019</td>
-		<td>PhD Student in Computer Science, University of Maryland, College Park</td>
+		<td>Assistant Professor of Computer Science, University of Texas at Austin</td>
 	</tr>
 	<tr>
 		<td><b>Jiangxue Han</b></td>
@@ -705,7 +712,7 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: May 12, 2025</p>
+<p align="right">Last modified: June 30, 2025</p>
 
 </div>
 
