--- a/research.htm
+++ b/research.htm
@@ -222,9 +222,9 @@ Data-driven discovery has become a new paradigm in biological research. By analy
 <ul style="list-style-type:disc; padding-left: 24px; line-height: 1.6;"><p>
 <li><a href="https://uvahealth.com/findadoctor/profile/todd-w-bauer" target="_blank"><font color="#002F6C">Todd W. Bauer</font></a>, Division of Surgical Oncology, Department of Surgery</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/fg5q/" target="_blank"><font color="#002F6C">Francine Garrett-Bakelman</font></a>, Department of Biochemistry and Molecular Genetics</li>
-<li><a href="https://med.virginia.edu/faculty/faculty-listing/hj8d/" target="_blank"><font color="#002F6C">Hao Jiang</font></a>, Department of Biochemistry and Molecular Genetics</li>
 <li><a href="http://lilab.medicine.virginia.edu/" target="_blank"><font color="#002F6C">Hui Li</font></a>, Department of Pathology</li>
 <li><a href="https://uvahealth.com/findadoctor/profile/li-li" target="_blank"><font color="#002F6C">Li Li</font></a>, Department of Family Medicine</li>
+<li><a href="https://www.jianjiemalab.com/" target="_blank"><font color="#002F6C">Jianjie Ma</font></a>, Division of Surgical Sciences, Department of Surgery</li>
 <li><a href="http://millerlab.org/" target="_blank"><font color="#002F6C">Clint L. Miller</font></a>, Department of Genome Sciences</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/gm7sj/" target="_blank"><font color="#002F6C">Golam Mohi</font></a>, Department of Biochemistry and Molecular Genetics</li>
 <li><a href="https://med.virginia.edu/genome-sciences/faculty/?facbio=1&id=27896" target="_blank"><font color="#002F6C">Aakrosh Ratan</font></a>, Department of Genome Sciences</li>
@@ -273,7 +273,7 @@ Data-driven discovery has become a new paradigm in biological research. By analy
 </div>
 </div>
 <hr>
-<p align="right">Last modified: May 18, 2025</p>
+<p align="right">Last modified: June 30, 2025</p>
 
 </div>
 
