--- a/software.htm
+++ b/software.htm
@@ -95,9 +95,15 @@ ul.topnav li.icon {display: none;}
 </p></td>
 </tr>
 <tr>
-<td style="width:120px; height:120px"><a href="https://github.com/zanglab/bart3d" target="_blank"><img src="images/bart3d_logo.jpg" style="width:100px"></a></td>
+<td style="width:120px; height:120px"><a href="https://github.com/zanglab/bart3d" target="_blank"><img src="images/bart3d_logo.png" style="width:100px"></a></td>
 <td><p>
 <b><a href="https://github.com/zanglab/bart3d" target="_blank">BART3D</a></b> (<u>BART</u> for <u>3D</u> genome data), a bioinformatics tool for inferring transcriptional regulators (TRs, including transcription factors and chromatin regulators) associated with differential chromatin interactions from Hi-C type 3D genome data for human or mouse. [<a href="https://github.com/zanglab/bart3d" target="_blank">Package</a>] [<a href="https://doi.org/10.1093/bioinformatics/btab173" target="_blank">Publication</a>]
+</p></td>
+</tr>
+<tr>
+<td style="width:120px; height:120px"><a href="https://github.com/hongpan-uva/BARTsc" target="_blank"><img src="images/bartsc_logo.png" style="width:100px"></a></td>
+<td><p>
+<b><a href="https://github.com/hongpan-uva/BARTsc" target="_blank">BARTsc</a></b> (<u>BART</u> for <u>s</u>ingle <u>c</u>ell data), a bioinformatics tool for inferring transcriptional regulators (TRs, including transcription factors and chromatin regulators) that are specifically active for each cell cluster from single-cell omics data, including scRNA-seq, scATAC-seq, and single-cell multiome (ATAC+RNA) profiles. [<a href="https://github.com/hongpan-uva/BARTsc" target="_blank">Package (beta)</a>] [<a href="https://aacrjournals.org/cancerres/article/84/6_Supplement/2342/739601" target="_blank">Abstract</a>]
 </p></td>
 </tr>
 <tr>
@@ -151,7 +157,7 @@ ul.topnav li.icon {display: none;}
 </tr>
 </table>
 <hr>
-<p align="right">Last modified: May 12, 2025</p>
+<p align="right">Last modified: July 20, 2025</p>
 </div>
 
 </body></html>
