--- a/index.htm
+++ b/index.htm
@@ -163,6 +163,20 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">July 2025</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Dr. Ze Yan joins the lab as a Postdoctoral Research Associate. Welcome Ze!
+		<br><br>
+		The lab welcomes BIMS rotation student Danielle Hughes!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">June 2025</font>
 		</p>
 	</div>
@@ -1221,7 +1235,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: June 30, 2025</p>
+<p align="right">Last modified: July 28, 2025</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
