--- a/people.htm
+++ b/people.htm
@@ -153,6 +153,9 @@ function myFunction() {
 <div class="ism-slider" data-transition_type="fade" data-play_type="loop" id="home-slider">
   <ol>
     <li>
+      <img src="images/20250815.jpg">
+    </li>
+    <li>
       <img src="images/20250128.jpg">
     </li>
     <li>
@@ -680,6 +683,12 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 		<th>Position at Lab</th>
 	</tr>
 	<tr>
+		<td><b>Ally Kuang</b></td>
+		<td>Bob Jones High School, Madison, AL ('26)</td>
+		<td>07/2025&ndash;08/2025</td>
+		<td>Volunteer</td>
+	</tr>
+	<tr>
 		<td><b>Elizabeth McClung</b></td>
 		<td>Rockbridge County High School, Lexington, VA ('23)</td>
 		<td>07/2022&ndash;08/2022</td>
@@ -712,7 +721,7 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: July 28, 2025</p>
+<p align="right">Last modified: August 16, 2025</p>
 
 </div>
 
