--- a/index.htm
+++ b/index.htm
@@ -137,7 +137,7 @@ function myFunction() {
       <img src="images/1488566891987_67648.jpg">
     </li>
     <li>
-      <img src="images/20230625_2.jpg">
+      <img src="images/20250815.jpg">
     </li>
     <li>
       <img src="images/1488567032192_666768.jpg">
@@ -160,6 +160,18 @@ function myFunction() {
 <br>
 <br>
 <h3><font color="#002F6C">Lab News</font></h3>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
+		<font color="#002F6C">August 2025</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		The Lab enjoys a summer outing, boating on the James River in Scottsville, Virginia.
+		</p>
+	</div>
+</div>
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
@@ -1235,7 +1247,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: July 28, 2025</p>
+<p align="right">Last modified: August 16, 2025</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
