--- a/research.htm
+++ b/research.htm
@@ -193,11 +193,13 @@ Data-driven discovery has become a new paradigm in biological research. By analy
 <hr>
 <h3><font color="#002F6C">Research Talks</font></h3>
 <p style="line-height: 1.6;">
-		<iframe width="288" height="162" src="https://www.youtube.com/embed/vKuLpoEnqgA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		<iframe width="440" height="248" src="https://www.youtube.com/embed/nPBLMMeUJh8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		&nbsp;&nbsp;
-		<iframe width="288" height="162" src="https://www.youtube.com/embed/fTfXJSHM2Ao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		<iframe width="440" height="248" src="https://www.youtube.com/embed/vKuLpoEnqgA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		<br><br>
+		<iframe width="440" height="248" src="https://www.youtube.com/embed/fTfXJSHM2Ao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		&nbsp;&nbsp;
-		<iframe width="288" height="162" src="https://www.youtube.com/embed/uOaXp-q3z0U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		<iframe width="440" height="248" src="https://www.youtube.com/embed/uOaXp-q3z0U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </p>
 <br>
 <hr>
@@ -274,7 +276,7 @@ Data-driven discovery has become a new paradigm in biological research. By analy
 </div>
 </div>
 <hr>
-<p align="right">Last modified: August 5, 2025</p>
+<p align="right">Last modified: August 22, 2025</p>
 
 </div>
 
