--- a/teaching.htm
+++ b/teaching.htm
@@ -138,6 +138,9 @@ ul.topnav li.icon {display: none;}
 </p>
 <hr>
 <h3><a href="https://med.virginia.edu/bims/bims-courses/bims-6000-core-course-in-integrative-biosciences/" target="_blank"><font color="#002F6C">BIMS 6000: Core Course in Integrative Biosciences</font></a></h3>
+<p style="line-height: 1.6;">
+	Fall 2025 Lecture: Visualization and interpretation of high-throughput genomics data. <a href="slides/data_visualization_2025.pdf" target="_blank">[Slides]</a>
+</p>
 <p align="center">
 <iframe width="800" height="450" src="https://www.youtube.com/embed/ldpmgqn1p5k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </p>
@@ -242,7 +245,7 @@ ul.topnav li.icon {display: none;}
 	</div>
 </div>
 <hr>
-<p align="right">Last modified: May 12, 2025</p>
+<p align="right">Last modified: September 1, 2025</p>
 </div>
 
 <script>
