--- a/teaching.htm
+++ b/teaching.htm
@@ -124,6 +124,20 @@ ul.topnav li.icon {display: none;}
 
 <h2 align="center"><font color="#002F6C">Teaching</font></h2>
 <hr>
+<h3><font color="#002F6C">COBI 8301: Computational Genomics</font></h3>
+<p style="line-height: 1.6;">
+Fall 2025:
+</p>
+<p style="text-indent:100px; line-height: 1.6;">
+	Lecture 2: Statistics review II. <a href="slides/COBI8301_2_Statistics_review_II.pdf" target="_blank">[Slides]</a>
+</p>
+<p style="text-indent:100px; line-height: 1.6;">
+	Lecture 9: Epigenome profiling, ChIP-seq, and peak detection. (under development...)<!--<a href="slides/.pdf" target="_blank">[Slides]</a>-->
+</p>
+<p style="text-indent:100px; line-height: 1.6;">
+	Lecture 22: Scaling and complexity of genome structure. (under development...)<!--<a href="slides/.pdf" target="_blank">[Slides]</a>-->
+</p>
+<hr>
 <h3><font color="#002F6C">COBI 8201/8202 / BIMS 8701/8702: Introduction to Computational Biology I/II</font></h3>
 <p style="line-height: 1.6;">
 <a href="https://uvacobi.github.io/compbio2025/" target="_blank">Spring 2025: Course website</a>
@@ -245,7 +259,7 @@ ul.topnav li.icon {display: none;}
 	</div>
 </div>
 <hr>
-<p align="right">Last modified: September 1, 2025</p>
+<p align="right">Last modified: September 4, 2025</p>
 </div>
 
 <script>
