--- a/publication.htm
+++ b/publication.htm
@@ -139,6 +139,11 @@ function myFunction() {
 <h3><font color="#002F6C">Recent Preprints</font></h3>
 * indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2025.09.02.673784" target="_blank">PATTY corrects open chromatin bias for improved bulk and single-cell CUT&Tag profiling</a><br>
+<u>Shengen Shawn Hu</u>, Zhangli Su, Lin Liu, <u>Qingying Chen</u>, <u>Megan C. Grieco</u>, <u>Mengxue Tian</u>, Anindya Dutta,  <u>Chongzhi Zang</u>
+<br>
+<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2025.09.02.673784" target="_blank">https://doi.org/10.1101/2025.09.02.673784</a> (2025)
+</p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2025.06.16.659976" target="_blank">Super-resolution microscopy reveals distinct epigenetic states regulated by estrogen receptor activity</a><br>
 Tara Akhshi*, <u>Shengen Shawn Hu</u>*, Esme Wheeler, Christian Hellriegel, Douglas S Richardson, Nicole Cayting, Wangu Mvula, Buraq Ahmed, Rinath Jeselsohn, <u>Chongzhi Zang</u><sup>#</sup>, Myles Brown<sup>#</sup>
 <br>
@@ -509,7 +514,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: June 30, 2025</p>
+<p align="right">Last modified: September 7, 2025</p>
 </div>
 
 <script>
