--- a/software.htm
+++ b/software.htm
@@ -86,6 +86,7 @@ ul.topnav li.icon {display: none;}
 
 <h2 align="center"><font color="#002F6C">Software</font></h2>
 <hr>
+<h3><font color="#002F6C">Transcriptional regulator analysis</font></h3>
 <table style="width:100%; line-height: 1.6;">
 <tr>
 <td style="width:120px; height:120px"><a href="bart/index.htm" target="_blank"><img src="images/bart_logo.jpg" style="width:100px"></a></td>
@@ -107,15 +108,31 @@ ul.topnav li.icon {display: none;}
 </p></td>
 </tr>
 <tr>
-<td style="width:120px; height:120px"><a href="https://github.com/zang-lab/IGN" target="_blank"><img src="images/ign_logo.jpg" style="width:100px"></a></td>
-<td><p>
-<b><a href="https://github.com/zang-lab/IGN" target="_blank">IGN</a></b> (<u>I</u>nvariable <u>G</u>ene <u>N</u>ormalization), a computational method for chromatin profiling data normalization based on a set of unchanged genes. [<a href="https://github.com/zang-lab/IGN" target="_blank">Package</a>] [<a href="https://doi.org/10.1016/j.csbj.2025.01.018" target="_blank">Publication</a>]
-</p></td>
-</tr>
-<tr>
 <td style="width:120px; height:120px"><a href="http://cistrome.org/MARGE/" target="_blank"><img src="images/marge_logo.jpg" style="width:100px"></a></td>
 <td><p>
 <b><a href="http://cistrome.org/MARGE/" target="_blank">MARGE</a></b> (<u>M</u>odel-based <u>A</u>nalysis of <u>R</u>egulation of <u>G</u>ene <u>E</u>xpression), a comprehensive computational method for inference of cis-regulation of gene expression leveraging public H3K27ac genomic profiles in human or mouse. [<a href="http://cistrome.org/MARGE/" target="_blank">Package</a>] [<a href="http://genome.cshlp.org/content/26/10/1417" target="_blank">Publication</a>]
+</p></td>
+</tr>
+</table>
+<hr>
+<h3><font color="#002F6C">High-throughput omics bias correction and data integration</font></h3>
+<table style="width:100%; line-height: 1.6;">
+<tr>
+<td style="width:120px; height:120px"><a href="https://github.com/zang-lab/PATTY" target="_blank"><img src="images/patty_logo.png" style="width:100px"></a></td>
+<td><p>
+<b><a href="https://github.com/zang-lab/PATTY" target="_blank">PATTY</a></b> (<u>P</u>retrained <u>A</u>nalyzer for <u>T</u>n5 <u>T</u>ransposase <u>Y</u>ielded bias), a machine learning-based computational method for correcting open chromatin bias in bulk and single-cell CUT&Tag data. [<a href="https://github.com/zang-lab/PATTY" target="_blank">Package (Beta)</a>] [<a href="https://www.biorxiv.org/content/10.1101/2025.09.02.673784" target="_blank">Preprint</a>]
+</p></td>
+</tr>
+<tr>
+<td style="width:120px; height:120px"><a href="https://github.com/zang-lab/SELMA" target="_blank"><img src="images/selma_logo.jpg" style="width:100px"></a></td>
+<td><p>
+<b><a href="https://github.com/zang-lab/SELMA" target="_blank">SELMA</a></b> (<u>S</u>implex <u>E</u>ncoded <u>L</u>inear <u>M</u>odel for <u>A</u>ccessible chromatin), a computational model for estimation and correction of intrinsic enzymatic cleavage bias in bulk and single-cell chromatin accessibility profiling (DNase-seq and ATAC-seq) data. [<a href="https://github.com/zang-lab/SELMA" target="_blank">Package</a>] [<a href="https://www.nature.com/articles/s41467-022-33194-z" target="_blank">Publication</a>]
+</p></td>
+</tr>
+<tr>
+<td style="width:120px; height:120px"><a href="https://github.com/zang-lab/IGN" target="_blank"><img src="images/ign_logo.jpg" style="width:100px"></a></td>
+<td><p>
+<b><a href="https://github.com/zang-lab/IGN" target="_blank">IGN</a></b> (<u>I</u>nvariable <u>G</u>ene <u>N</u>ormalization), a computational method for chromatin profiling data normalization based on a set of unchanged genes. [<a href="https://github.com/zang-lab/IGN" target="_blank">Package</a>] [<a href="https://doi.org/10.1016/j.csbj.2025.01.018" target="_blank">Publication</a>]
 </p></td>
 </tr>
 <tr>
@@ -124,23 +141,21 @@ ul.topnav li.icon {display: none;}
 <b><a href="https://CRAN.R-project.org/package=MANCIE" target="_blank">MANCIE</a></b> (<u>M</u>atrix <u>A</u>nalysis and <u>N</u>ormalization by <u>C</u>oncordant <u>I</u>nformation <u>E</u>nhancement), a computational method for high-dimensional genomic data integration. [<a href="https://CRAN.R-project.org/package=MANCIE" target="_blank">Package</a>] [<a href="http://www.nature.com/articles/ncomms11305" target="_blank">Publication</a>] 
 </p></td>
 </tr>
-<tr>
-<td style="width:120px; height:120px"><a href="https://zanglab.github.io/SICER2" target="_blank"><img src="images/recognicer_logo.jpg" style="width:100px"></a></td>
-<td><p>
-<b><a href="https://zanglab.github.io/SICER2" target="_blank">RECOGNICER</a></b> (<u>Re</u>cursive <u>co</u>arse-<u>g</u>rai<u>n</u>ing <u>i</u>dentification for <u>C</u>hIP-seq <u>e</u>nriched <u>r</u>egions), a ChIP-seq ultra-broad peak calling method. [<a href="https://link.springer.com/article/10.1007%2Fs40484-020-0225-2" target="_blank">Publication</a>] [<a href="https://github.com/zanglab/recognicer" target="_blank">Source code</a>] [Package built in <a href="https://zanglab.github.io/SICER2" target="_blank">SICER2</a>] 
-</p></td>
-</tr>
-<tr>
-<td style="width:120px; height:120px"><a href="https://github.com/zang-lab/SELMA" target="_blank"><img src="images/selma_logo.jpg" style="width:100px"></a></td>
-<td><p>
-<b><a href="https://github.com/zang-lab/SELMA" target="_blank">SELMA</a></b> (<u>S</u>implex <u>E</u>ncoded <u>L</u>inear <u>M</u>odel for <u>A</u>ccessible chromatin), a computational model for estimation and correction of intrinsic enzymatic cleavage biases in bulk and single-cell chromatin accessibility profiling (DNase-seq and ATAC-seq) data. [<a href="https://github.com/zang-lab/SELMA" target="_blank">Package</a>] [<a href="https://www.nature.com/articles/s41467-022-33194-z" target="_blank">Publication</a>]
-</p></td>
-</tr>
+</table>
+<hr>
+<h3><font color="#002F6C">ChIP-seq signal detection</font></h3>
+<table style="width:100%; line-height: 1.6;">
 <tr>
 <td style="width:120px; height:120px"><a href="https://zanglab.github.io/SICER2" target="_blank"><img src="images/sicer_logo.jpg" style="width:100px"></a></td>
 <td><p>
 <b><a href="https://zanglab.github.io/SICER2" target="_blank">SICER</a></b> (<u>S</u>patial-clustering <u>I</u>dentification of <u>C</u>hIP-<u>E</u>nriched <u>R</u>egions), a ChIP-Seq data analysis method. [<a href="http://home.gwu.edu/~wpeng/Software.htm" target="_blank">Package (v1.1)</a>] [<a href="https://academic.oup.com/bioinformatics/article/25/15/1952/212783" target="_blank">Publication</a>]<br><br>
 <a href="https://zanglab.github.io/SICER2" target="_blank"><b>SICER2</b></a> [<a href="https://zanglab.github.io/SICER2" target="_blank">Package (v2.0)</a>]
+</p></td>
+</tr>
+<tr>
+<td style="width:120px; height:120px"><a href="https://zanglab.github.io/SICER2" target="_blank"><img src="images/recognicer_logo.jpg" style="width:100px"></a></td>
+<td><p>
+<b><a href="https://zanglab.github.io/SICER2" target="_blank">RECOGNICER</a></b> (<u>Re</u>cursive <u>co</u>arse-<u>g</u>rai<u>n</u>ing <u>i</u>dentification for <u>C</u>hIP-seq <u>e</u>nriched <u>r</u>egions), a ChIP-seq ultra-broad peak calling method. [<a href="https://link.springer.com/article/10.1007%2Fs40484-020-0225-2" target="_blank">Publication</a>] [<a href="https://github.com/zanglab/recognicer" target="_blank">Source code</a>] [Package built in <a href="https://zanglab.github.io/SICER2" target="_blank">SICER2</a>] 
 </p></td>
 </tr>
 </table>
@@ -157,7 +172,7 @@ ul.topnav li.icon {display: none;}
 </tr>
 </table>
 <hr>
-<p align="right">Last modified: July 20, 2025</p>
+<p align="right">Last modified: September 7, 2025</p>
 </div>
 
 </body></html>
