--- a/index.htm
+++ b/index.htm
@@ -163,12 +163,26 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">September 2025</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Shawn's collaboration paper with the Hai-Hui Xue lab is published in <a href="https://www.science.org/doi/10.1126/sciimmunol.adq8970" target="_blank"><i><b>Science Immunology</b></i></a>. Congratulations!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">August 2025</font>
 		</p>
 	</div>
 	<div class="column right">
 		<p>
-		The Lab enjoys a summer outing, boating on the James River in Scottsville, Virginia.
+		The lab receives a Single-PI Pilot Award from the UVA Comprehensive Cancer Center.
+		<br><br>
+		The lab enjoys a summer outing, boating on the James River in Scottsville, Virginia.
 		</p>
 	</div>
 </div>
@@ -1247,7 +1261,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: August 16, 2025</p>
+<p align="right">Last modified: September 14, 2025</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
