--- a/publication.htm
+++ b/publication.htm
@@ -164,6 +164,11 @@ Vinay Singh Tanwar*, Vajir Malek*, <u>Jingyi Wang</u>*, Yingjun Luo, Naseeb Kaur
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.science.org/doi/10.1126/sciimmunol.adq8970" target="_blank">Single-cell multiomics identifies Tcf1 and Lef1 as key initiators of early thymic progenitor fate</a><br>
+Xin Zhao*, <u>Shengen Shawn Hu</u>*, Wen-Han Lee, Johannes L. Zakrzewski, Qing-Sheng Mi, Rachel K. Rosenstein, <u>Chongzhi Zang</u><sup>#</sup>, Xiaoke Ma<sup>#</sup>, Hai-Hui Xue<sup>#</sup>
+<br>
+<i><b>Science Immunology</b></i> 10, eadq8970 (2025)
+</p></li>
 <li><p><a href="https://www.cell.com/cell-reports/fulltext/S2211-1247(25)00587-X" target="_blank">Regulation of epigenetics and chromosome structure by human ORC2</a><br>
 Zhangli Su*<sup>#</sup>, <u>Mengxue Tian</u>*, Etsuko Shibata, Yoshiyuki Shibata, Tianyi Yang, <u>Zhenjia Wang</u>, Fulai Jin, <u>Chongzhi Zang</u><sup>#</sup>, Anindya Dutta<sup>#</sup>
 <br>
@@ -394,7 +399,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="48">
+<ol style="padding-left: 24px; line-height: 1.6;" start="49">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -514,7 +519,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: September 7, 2025</p>
+<p align="right">Last modified: September 14, 2025</p>
 </div>
 
 <script>
