--- a/teaching.htm
+++ b/teaching.htm
@@ -150,6 +150,9 @@ Fall 2025:
 <p style="text-indent:100px; line-height: 1.6;">
 	Lecture 15: Dimensionality reduction. <a href="slides/COBI8201_15_Dimensionality_reduction.pdf" target="_blank">[Slides]</a>
 </p>
+<p style="line-height: 1.6;">
+<a href="https://uvacobi.github.io/compbio2024/" target="_blank">Spring 2024: Course website</a>
+</p>
 <hr>
 <h3><a href="https://med.virginia.edu/bims/bims-courses/bims-6000-core-course-in-integrative-biosciences/" target="_blank"><font color="#002F6C">BIMS 6000: Core Course in Integrative Biosciences</font></a></h3>
 <p style="line-height: 1.6;">
@@ -183,7 +186,7 @@ Fall 2025:
 <hr>
 <h3><font color="#002F6C">BIMS 8601: Foundations of Computational Genomics</font></h3>
 <p style="line-height: 1.6;">
-<a href="https://cphg.github.io/compgen/" target="_blank">Spring 2022: Course website</a>
+<a href="https://uvacobi.github.io/compgen2022/" target="_blank">Spring 2022: Course website</a>
 </p>
 <p style="text-indent:100px; line-height: 1.6;">
 	Lecture 1: Epigenomics: Transcription factor and sequence motif. <a href="slides/epigenomics1.pdf" target="_blank">[Slides]</a>
