--- a/teaching.htm
+++ b/teaching.htm
@@ -132,7 +132,7 @@ Fall 2025:
 	Lecture 2: Statistics review II. <a href="slides/COBI8301_2_Statistics_review_II.pdf" target="_blank">[Slides]</a>
 </p>
 <p style="text-indent:100px; line-height: 1.6;">
-	Lecture 9: Epigenome profiling, ChIP-seq, and peak detection. (under development...)<!--<a href="slides/.pdf" target="_blank">[Slides]</a>-->
+	Lecture 9: Epigenome profiling, ChIP-seq, and peak detection. <a href="slides/COBI8301_9_ChIPseq.pdf" target="_blank">[Slides]</a>
 </p>
 <p style="text-indent:100px; line-height: 1.6;">
 	Lecture 22: Scaling and complexity of genome structure. (under development...)<!--<a href="slides/.pdf" target="_blank">[Slides]</a>-->
@@ -262,7 +262,7 @@ Fall 2025:
 	</div>
 </div>
 <hr>
-<p align="right">Last modified: September 4, 2025</p>
+<p align="right">Last modified: November 5, 2025</p>
 </div>
 
 <script>
