--- a/people.htm
+++ b/people.htm
@@ -232,7 +232,7 @@ function myFunction() {
 Office: <a href="http://www.virginia.edu/webmap/popPages/130-westcomplex.html" target="_blank" style="text-decoration:none;">West Complex</a>, Room 6131C<br>
 Phone: 434-243-5397<br>
 Email: <a href="mailto:zang@virginia.edu">zang@virginia.edu</a><br>
-Website: <a href="https://czang.github.io/" target="_blank">czang.github.io</a><br>
+<!--Website: <a href="https://czang.github.io/" target="_blank">czang.github.io</a><br>-->
 <a href="https://med.virginia.edu/faculty/faculty-listing/cz3d/" target="_blank">School of Medicine faculty profile</a><br>
 <a href="https://engineering.virginia.edu/faculty/chongzhi-zang" target="_blank">School of Engineering faculty profile</a><br>
 <a href="https://scholar.google.com/citations?user=GV7vSDMAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;">Google Scholar profile</a><br>
@@ -248,9 +248,13 @@ Dr. Chongzhi Zang is an Associate Professor in the Department of Genome Sciences
 <img align="right" src="images/shengen_hu.jpg" style="width:180px">
 <b>Sheng'en Shawn Hu, PhD</b>
 <a href="mailto:sh8tv@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=JwXm75kAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
+</p>
+<p style="line-height: 1.6;">Office: West Complex, Room 6115B<br>
+<a href="https://med.virginia.edu/faculty/faculty-listing/sh8tv/" target="_blank">School of Medicine faculty profile</a><br>
+</p>
+<p style="width: 640px; line-height: 1.6;" align="left">
 Dr. Sheng'en Shawn Hu is a Research Assistant Professor after completing his postdoctoral training in the lab. Before joining UVA in November 2017, he received his undergradaute and PhD degree in bioinformatics from School of Life Science and Technology, Tongji University in China, and was a visiting student at Harvard University. He is working on developing computatinoal methodology of integrating high-throughput chromatin accessibility data for studying functional gene regulation.
-</p><br><br>
+</p><br>
 <hr>
 <h3><font color="#002F6C">Postdoctoral Associates</font></h3>
 <p style="line-height: 1.6;">
@@ -336,21 +340,6 @@ Chloe Chen is a post-baccalaureate pre-medical student at UVA. She completed her
 </p><br><br><br>
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
-<!--<h4><font color="#002F6C">Class of 2025</font></h4>
-<p style="line-height: 1.6;">
-<img align="right" src="images/andy_cao.jpg" style="width:180px">
-<b>Andy Cao</b>
-<a href="mailto:kcz3my@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Andy Cao is a Fourth Year undergraduate student (Class of 2025) planning to study Biology and Computer Science on a pre-med track. He is excited to develop and apply computational algorithms to explore the human genome and questions relating to genomic disorders.
-</p><br><br><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/yanbin_xu.jpg" style="height:180px">
-<b>Yanbin Xu</b>
-<a href="mailto:xzy8wd@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Yanbin Xu is a Fourth Year undergraduate student (Class of 2025) pursuing a double major in Neuroscience and Statistics. He is excited to develop and apply bioinformatics algorithms to study genomic problems and learn more about machine learning in precision medicine.
-</p><br><br><br>-->
 <h4><font color="#002F6C">Class of 2026</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/grant_atwood.jpg" style="width:180px">
@@ -714,7 +703,7 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: October 1, 2025</p>
+<p align="right">Last modified: November 14, 2025</p>
 
 </div>
 
