--- a/teaching.htm
+++ b/teaching.htm
@@ -135,7 +135,7 @@ Fall 2025:
 	Lecture 9: Epigenome profiling, ChIP-seq, and peak detection. <a href="slides/COBI8301_9_ChIPseq.pdf" target="_blank">[Slides]</a>
 </p>
 <p style="text-indent:100px; line-height: 1.6;">
-	Lecture 22: Scaling and complexity of genome structure. (under development...)<!--<a href="slides/.pdf" target="_blank">[Slides]</a>-->
+	Lecture 22: Scaling and complexity of genome structure. <a href="slides/COBI8301_22_Scaling_complexity.pdf" target="_blank">[Slides]</a>
 </p>
 <hr>
 <h3><font color="#002F6C">COBI 8201/8202 / BIMS 8701/8702: Introduction to Computational Biology I/II</font></h3>
@@ -262,7 +262,7 @@ Fall 2025:
 	</div>
 </div>
 <hr>
-<p align="right">Last modified: November 5, 2025</p>
+<p align="right">Last modified: November 14, 2025</p>
 </div>
 
 <script>
